# cgpu

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
src/cgpu/: __init__.py  cli.py  ctqdm.py
