[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cgpu"
version = "0.1.0"
description = "Quick CUDA/GPU status summary for ML engineers"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "August Sletto", email = "augustsletto@gmail.com" }
]
keywords = ["cuda", "gpu", "pytorch", "machine-learning", "deep-learning", "nvidia"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "colorama>=0.4.0",
]

[project.optional-dependencies]
full = [
    "torch",
    "pynvml",
]

[project.urls]
Homepage = "https://github.com/augustsletto/cgpu"
Repository = "https://github.com/augustsletto/cgpu"
Issues = "https://github.com/augustsletto/cgpu/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/cgpu"]
